--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,25 +2,24 @@ name: 🐍 Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # runs every 24 hrs
-  workflow_dispatch:
-
+    - cron: "0 0 * * *"  
+  workflow_dispatch:     
 jobs:
-  generate:
+  generate-snake:
     runs-on: ubuntu-latest
+
     steps:
       - name: Generate GitHub Contribution Snake
-        uses: Platane/snk@v3
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Adtkre
+          github_user_name: Adtkre    
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg
 
-      - name: Push to GitHub
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
-          target_branch: output
+          target_branch: output      
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
