--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,27 +1,28 @@
-name: 🐍 Generate Snake Animation
+name: 🐍 Pastel Snake Animation
 
 on:
   schedule:
     - cron: "0 0 * * *"  # Runs every day at midnight UTC
-  workflow_dispatch:     # Allows you to run it manually
+  workflow_dispatch:
 
 jobs:
   generate-snake:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Generate GitHub Contribution Snake
+      - name: Generate pastel snake SVGs
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Adtkre               # Your GitHub username
+          github_user_name: Adtkre
           outputs: |
-            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=#77dd77&color_dots=#e0f8e0,#c0eec0,#a0e4a0,#80dd80,#60d460
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#77dd77&color_dots=#5a7d5a,#6d8d6d,#80a080,#94b194,#a8c2a8
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
-          keep_history: false                  
+          keep_history: false
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
