--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           github_user_name: Adtkre
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=#77dd77&color_dots=#e0f8e0,#c0eec0,#a0e4a0,#80dd80,#60d460
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#77dd77&color_dots=#5a7d5a,#6d8d6d,#80a080,#94b194,#a8c2a8
+            dist/github-contribution-grid-snake.svg?palette=github-light&color_snake=#dd79d9&color_dots=#fce4f9,#f3d1f4,#e9bdef,#dfa8ea,#d593e5
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#dd79d9&color_dots=#8a558a,#9b66a3,#ac78bb,#bd89d4,#ce9aec
 
       - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
